--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,7 +15,7 @@
       <button type="button" class="btn btn-primary" data-action="click->post#space">全角スペース</button>
     </div>
   <% end %>
-  <div class="vertical serif mx-auto width0" id="preview" data-target="post.preview"></div>
+  <div class="vertical serif mx-auto width0" data-target="post.preview"></div>
 </div>
 
 <script type="text/javascript">
