--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -54,6 +54,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/11/20　短歌の字数制限を緩和。</li>
   <li class="ml">2018/11/19　投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消。</li>
   <li class="ml">2018/11/18　JavaScriptフレームワークのStimulusを導入。「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消。</li>
   <li class="ml">2018/11/07　短歌の字数制限を緩和。</li>
