--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 
 <ul class="nav nav-tabs col-md-5 mx-auto mt-3" id="myTab" role="tablist">
   <li class="nav-item">
-    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">プロフィール</a>
+    <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">プロフィール</a>
   </li>
   <% unless user.provider == 'twitter' %>
   <li class="nav-item">
@@ -18,7 +18,7 @@
   <li>
 </ul>
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+  <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <div class="field form-group mx-auto col-md-4 mt-3">
         <%= f.label :アイコン %><br />
@@ -77,3 +77,15 @@
     <div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "アカウントを削除すると、投稿した短歌もすべて削除されます。本当に削除しますか？" }, method: :delete, class: 'btn btn-primary' %></div>
   </div>
 </div>
+
+<script>
+$(function() {
+  $('a[data-toggle="tab"]').on('click', function(e) {
+    window.localStorage.setItem('activeTab', $(this).attr('href'))
+  })
+  var activeTab = window.localStorage.getItem('activeTab')
+  if (activeTab) {
+    $('#myTab a[href="' + activeTab + '"]').tab('show')
+  }
+})
+</script>
