--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -54,12 +54,13 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/11/21　短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消。</li>
   <li class="ml">2018/11/20　短歌の字数制限を緩和。</li>
   <li class="ml">2018/11/19　投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消。</li>
   <li class="ml">2018/11/18　JavaScriptフレームワークのStimulusを導入。「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消。</li>
   <li class="ml">2018/11/07　短歌の字数制限を緩和。</li>
   <li class="ml">2018/11/03　ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上のUtakataアイコンが「あたらしい歌」へのリンクになっています。</li>
-  <li class="ml">2018/10/30　特殊記号を含む作品をTwitterシェアできない不具合を修正。</li>
+  <li class="ml">2018/10/30　特殊記号を含む短歌をTwitterシェアできない不具合を修正。</li>
   <li class="ml">2018/10/15　通知機能の不具合を修正。</li>
   <li class="ml">2018/10/08　Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は、上記連絡先にご連絡いただければ対応します。</li>
   <li class="ml">2018/09/27　通知確認画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページに遷移するように変更。</li>
