--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,7 +5,7 @@
 <div data-controller="post">
   <%= form_for(@post, url: { controller: :posts, action: :update }) do |f| %>
     <div class="form-group mx-auto col-md-4 mt-4">
-      <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', id: 'input', 'data-target': 'post.input', 'data-action': 'keyup->post#preview' %>
+      <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', id: 'input', 'data-target': 'post.input', 'data-action': 'keyup->post#previewPost' %>
     </div>
     <div class="form-group mx-auto col-md-4">
       <%= f.submit "変更する", class: 'btn btn-primary' %>
