--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -5,6 +5,8 @@
 
 <p class="col-md-5 mx-auto">短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたり、Twitterに短歌をシェアしたりすることができます。</p>
 
+<p class="col-md-5 mx-auto">※ メールアドレスにスペルミスがあるとアカウント登録できないのでご注意ください。確認用メールが届かない場合は、スペルミスの可能性が高いので、もう一度正しいメールアドレスで<%= link_to '新規アカウント登録', new_user_registration_path %>を行ってください。</p>
+
 <p class="col-md-5 mx-auto"><a href="https://fuyu.hatenablog.com/entry/2018/06/24/233652">開発の背景を紹介するブログ</a>を書きました。</p>
 
 <h4 class="mt-5 mx-auto form-group col-md-5">Help</h4>
@@ -17,9 +19,9 @@
 
 <p class="col-md-5 mx-auto">短歌投稿フォームでルビ用のHTMLタグを利用できます（ルビを振りたい文字列を選択して、フォーム右下に現れる「ルビ」ボタンをタップするとルビ用のHTMLタグが挿入されます）。</p>
 
-<p class="col-md-5 mx-auto"><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rp&gt;（&lt;/rp&gt;&lt;rt&gt;ルビ&lt;/rt&gt;&lt;rp&gt;）&lt;/rp&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
+<p class="col-md-5 mx-auto"><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rt&gt;ルビ&lt;/rt&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
 
-<p class="col-md-5 mx-auto">※ &lt;rp&gt;タグに挟まれた括弧（&lt;rp&gt;（&lt;/rp&gt;……&lt;rp&gt;）&lt;/rp&gt;）も、ルビに対応していない機能（Twitterシェア機能など）で「漢字（ルビ）」のように表示するために必要な情報なので省略しないでください。</p>
+<p class="col-md-5 mx-auto">※ &lt;rp&gt;タグは内部的に自動で補完されるので入力不要です。</p>
 
 <h5 class="mt-4 mx-auto form-group col-md-5">Twitterに短歌をシェアする方法</h5>
 
@@ -54,6 +56,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/11/23　投稿フォームで「ルビ」ボタンを押したときに挿入されるルビタグの表示を簡略化。</li>
   <li class="ml">2018/11/21　短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消。</li>
   <li class="ml">2018/11/20　短歌の字数制限を緩和。</li>
   <li class="ml">2018/11/19　投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消。</li>
