--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -56,6 +56,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/11/24　投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</li>
   <li class="ml">2018/11/23　投稿画面で「ルビ」ボタンを押したときに挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビューに反映されない問題を解消。</li>
   <li class="ml">2018/11/21　短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消。</li>
   <li class="ml">2018/11/20　短歌の字数制限を緩和。</li>
