--- a/app/views/posts/follower.html.erb
+++ b/app/views/posts/follower.html.erb
@@ -2,7 +2,7 @@
 
 <div class = "vertical serif tanka-index mt-3">
   <h6>
-    <%= link_to ruby(@post.tanka), post_path(id: @post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
+    <%= link_to @post.tanka.html_safe, post_path(id: @post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
     <% if user_signed_in? && current_user.id != @post.user_id %>
       <%= render 'favorites/favorites', post: @post, size: 'sm' %>
     <% else %>
