--- a/app/views/posts/search_mine.html.erb
+++ b/app/views/posts/search_mine.html.erb
@@ -6,7 +6,7 @@
   </h6>
   <% @posts.each do |post| %>
     <p>
-      <%= link_to ruby(post.tanka), post_path(id: post.id), method: :get, class: 'middle tanka-link' %>&nbsp;
+      <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'middle tanka-link' %>&nbsp;
       <i class="sm middle hearts fas fa-heart"></i><span class="middle sm horizontal hearts"><%= post.followers_by_type_count('User') %></span>
     </p>
   <% end %>
