--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
   </div>
   <% @posts.each do |post| %>
     <p>
-      <%= link_to ruby(post.tanka), post_path(id: post.id), method: :get, class: 'middle tanka-link' %>&nbsp;
+      <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'middle tanka-link' %>&nbsp;
       <% if user_signed_in? && current_user.id != post.user_id %>
         <%= render 'favorites/favorites', post: post, size: 'sm' %>
       <% else %>
