--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -11,13 +11,9 @@
 
 <h4 class="mt-5 mx-auto form-group col-md-5">Help</h4>
 
-<h5 class="mx-auto form-group col-md-5">マニュアル</h5>
+<h5 id="ruby" class="mt-4 mx-auto form-group col-md-5">ルビの振り方</h5>
 
-<p class="col-md-5 mx-auto"><a href="https://twitter.com/i/moments/1010856871240929280">Utakataの使い方</a>を動画付きでTwitterのモーメントとしてまとめました。</p>
-
-<h5 class="mt-4 mx-auto form-group col-md-5">ルビの振り方</h5>
-
-<p class="col-md-5 mx-auto">短歌投稿フォームでルビ用のHTMLタグを利用できます（ルビを振りたい文字列を選択して、フォーム右下に現れる「ルビ」ボタンをタップするとルビ用のHTMLタグが挿入されます）。</p>
+<p class="col-md-5 mx-auto">短歌投稿フォームでルビを振りたい文字列を選択して、フォーム右下に現れる「ルビ」ボタンをタップすると、ルビ用のHTMLタグが挿入されます。カーソルが自動で&lt;rt&gt;〜&lt;/rt&gt;の間にセットされるので、そのままルビを入力してください。</p>
 
 <p class="col-md-5 mx-auto"><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rt&gt;ルビ&lt;/rt&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
 
@@ -56,23 +52,24 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/11/26　投稿画面のルビの振り方の説明のレイアウトとHelpリンク先を調整。</li>
   <li class="ml">2018/11/25　投稿画面では右上の「投稿する」ボタンを非表示とするように変更（投稿フォーム左下の「投稿する」と紛らわしいため）。</li>
   <li class="ml">2018/11/24　投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</li>
-  <li class="ml">2018/11/23　投稿画面で「ルビ」ボタンを押したときに挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビューに反映されない問題を解消。</li>
+  <li class="ml">2018/11/23　投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビューに反映されない問題を解消。</li>
   <li class="ml">2018/11/21　短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消。</li>
   <li class="ml">2018/11/20　短歌の字数制限を緩和。</li>
   <li class="ml">2018/11/19　投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消。</li>
-  <li class="ml">2018/11/18　JavaScriptフレームワークのStimulusを導入。「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消。</li>
+  <li class="ml">2018/11/18　「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消。</li>
   <li class="ml">2018/11/07　短歌の字数制限を緩和。</li>
-  <li class="ml">2018/11/03　ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上のUtakataアイコンが「あたらしい歌」へのリンクになっています。</li>
-  <li class="ml">2018/10/30　特殊記号を含む短歌をTwitterシェアできない不具合を修正。</li>
+  <li class="ml">2018/11/03　ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上のUtakataロゴが「あたらしい歌」へのリンクになっています。</li>
+  <li class="ml">2018/10/30　特殊記号を含む短歌をTwitterシェアできない問題を解消。</li>
   <li class="ml">2018/10/15　通知機能の不具合を修正。</li>
   <li class="ml">2018/10/08　Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は、上記連絡先にご連絡いただければ対応します。</li>
   <li class="ml">2018/09/27　通知確認画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページに遷移するように変更。</li>
-  <li class="ml">2018/09/13　Twitterシェア機能で"#"が表示されない不具合を修正。</li>
+  <li class="ml">2018/09/13　Twitterシェア機能で"#"が表示されない問題を解消。</li>
   <li class="ml">2018/08/12　SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更。</li>
-  <li class="ml">2018/07/31　Twitterシェア機能でセミコロンが表示されない不具合を修正。</li>
+  <li class="ml">2018/07/31　Twitterシェア機能でセミコロンが表示されない問題を解消。</li>
   <li class="ml">2018/07/13　投稿した短歌を編集する機能を追加。ユーザーページに短歌の投稿数を確認できる表示を追加。プロフィールの字数制限を140字以内から300字以内に緩和。</li>
-  <li class="ml">2018/06/26　ルビ以外の装飾が一部可能となっていた不具合を修正。「ご案内」に情報を追加。</li>
+  <li class="ml">2018/06/26　ルビ以外の装飾が一部可能となっていた問題を解消。「ご案内」に情報を追加。</li>
   <li class="ml">2018/06/23　サービスリリース。</li>
 </ul>
