--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -21,23 +21,23 @@
 
 <h5 class="mt-4 mx-auto form-group col-md-5">Twitterに短歌をシェアする方法</h5>
 
-<p class="col-md-5 mx-auto">個別投稿のページ（短歌の本文をタップすると遷移するページ）で、作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
+<p class="col-md-5 mx-auto">個別短歌のページ（短歌の本文をタップすると表示されるページ）で、作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
 
 <h5 class="mt-4 mx-auto form-group col-md-5">短歌にいいねした人の一覧を見る方法</h5>
 
 <p class="col-md-5 mx-auto">個別投稿のページで、ハートの下の数字をタップすると、短歌にいいねした人の一覧を見ることができます。</p>
 
-<h5 class="mt-4 mx-auto form-group col-md-5">歌人の一覧を見る方法</h5>
+<h5 class="mt-4 mx-auto form-group col-md-5">検索フォームで何も文字を打たずに検索すると…</h5>
 
-<p class="col-md-5 mx-auto">検索フォームで何も文字を打たずに検索すると、全件表示となり、Utakataに登録されているすべての短歌や歌人を表示することができます。</p>
+<p class="col-md-5 mx-auto">歌人の一覧が表示されます。</p>
+
+<h5 class="mt-4 mx-auto form-group col-md-5">左上のUtakataロゴをタップすると…</h5>
+
+<p class="col-md-5 mx-auto">新着短歌の一覧が表示されます。</p>
 
 <h5 class="mt-4 mx-auto form-group col-md-5">別アカウントへのデータ移行</h5>
 
 <p class="col-md-5 mx-auto">設定画面からデータを別アカウントに移行する方法は現状ありません。データ移行をご希望の場合（メールログインのアカウントからTwitterログインのアカウントに移行したい場合など）は、下記連絡先にご連絡いただければ対応できます。</p>
-
-<h5 class="mt-4 mx-auto form-group col-md-5">左上の"Utakata"をタップすると…</h5>
-
-<p class="col-md-5 mx-auto">新着短歌の一覧が表示されます。</p>
 
 <h4 class="mt-5 mx-auto form-group col-md-5">連絡先</h4>
 
@@ -52,7 +52,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
-  <li class="ml">2018/11/26　投稿画面のルビの振り方の説明のレイアウトとHelpリンク先を調整。</li>
+  <li class="ml">2018/11/26　検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。投稿画面のルビの振り方の説明のレイアウトとHelpリンク先を調整。</li>
   <li class="ml">2018/11/25　投稿画面では右上の「投稿する」ボタンを非表示とするように変更（投稿フォーム左下の「投稿する」と紛らわしいため）。</li>
   <li class="ml">2018/11/24　投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</li>
   <li class="ml">2018/11/23　投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビューに反映されない問題を解消。</li>
@@ -65,7 +65,7 @@
   <li class="ml">2018/10/30　特殊記号を含む短歌をTwitterシェアできない問題を解消。</li>
   <li class="ml">2018/10/15　通知機能の不具合を修正。</li>
   <li class="ml">2018/10/08　Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は、上記連絡先にご連絡いただければ対応します。</li>
-  <li class="ml">2018/09/27　通知確認画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページに遷移するように変更。</li>
+  <li class="ml">2018/09/27　通知画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページを表示するように変更。</li>
   <li class="ml">2018/09/13　Twitterシェア機能で"#"が表示されない問題を解消。</li>
   <li class="ml">2018/08/12　SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更。</li>
   <li class="ml">2018/07/31　Twitterシェア機能でセミコロンが表示されない問題を解消。</li>
