--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -2,9 +2,9 @@
 
 <div class = "vertical serif tanka-index mt-3">
   <h6>
-    <%= search_word(@search) %>：<%= all_tankas %>｜<!--
+    「<%= @search %>」で検索：短歌｜<!--
     --><% if user_signed_in? %><!--
-    --><%= link_to '自分', tanka_search_mine_path(search: @search), method: :get %>｜<!--
+    --><%= link_to '自分の短歌', tanka_search_mine_path(search: @search), method: :get %>｜<!--
     --><% end %><!--
     --><%= link_to '歌人', search_users_path(search: @search), method: :get %>
   </h6>
