投稿画面でドロップダウンメニューが隠れてしまう問題を解消

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,11 +27,13 @@
             </div>
           </div>
         </li>
-        <% unless @title == '短歌投稿' %>
+        <% if @title == '短歌投稿' %>
+          <li class="nav-item form-inline hidden">
+        <% else %>
           <li class="nav-item form-inline">
-            <%= link_to '投稿する', new_post_path, method: :get, class: 'btn btn-sm btn-primary-reversed' %>
-          </li>
         <% end %>
+          <%= link_to '投稿する', new_post_path, method: :get, class: 'btn btn-sm btn-primary-reversed' %>
+        </li>
       </ul>
     <% else %>
       <%= form_tag(search_posts_path, method: :get) do %>
