短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -52,7 +52,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
-  <li class="ml">2018/11/26　検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。投稿画面のルビの振り方の説明のレイアウトとHelpリンク先を調整。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</li>
+  <li class="ml">2018/11/26　検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダウンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面のルビの振り方の説明のレイアウトとHelpリンク先を調整。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</li>
   <li class="ml">2018/11/25　投稿画面では右上の「投稿する」ボタンを非表示とするように変更（投稿フォーム左下の「投稿する」と紛らわしいため）。</li>
   <li class="ml">2018/11/24　投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</li>
   <li class="ml">2018/11/23　投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビューに反映されない問題を解消。</li>
