縦中横に対応

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -142,3 +142,9 @@ h6 {
 .hidden {
   visibility: hidden;
 }
+
+.tate {
+  -webkit-text-combine: horizontal;
+  -ms-text-combine-horizontal: all;
+  text-combine-upright: all;
+}
