--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -9,6 +9,7 @@
     </div>
     <div class="form-group mx-auto col-md-4">
       <%= f.submit "変更する", class: 'btn btn-primary' %>
+      <button type="button" class="btn btn-primary" data-action="click->post#upright">縦中横</button>
       <button type="button" class="btn btn-primary" data-action="click->post#space">全角スペース</button>
     </div>
   <% end %>
