--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,23 +6,17 @@
   <%= form_for(@post, url: { controller: :posts, action: :create }) do |f| %>
     <div class="form-group mx-auto col-md-4 mt-3">
       <ul class="sm">
-        <p class="description"><b>ルビの振り方</b>：ルビを振りたい文字列を選択して、右下に現れる「ルビ」ボタンをタップし、&lt;rt&gt;〜&lt;/rt&gt;の間にルビを入力してください。<a href="../../info#ruby">→Help</a></p>
+        <p class="description"><b>ルビの振り方</b>：ルビを振りたい文字列を選択して、「ルビ」ボタンをタップし、&lt;rt&gt;〜&lt;/rt&gt;の間にルビを入力してください。<a href="../../info#ruby">→Help</a></p>
         <p class="description"><b>縦中横</b>：縦中横にしたい文字列を選択して、「縦中横」ボタンをタップしてください。</p>
       </ul>
       <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', id: 'input', 'data-target': 'post.input', 'data-action': 'keyup->post#previewPost compositionend->post#previewPost' %>
     </div>
     <div class="form-group mx-auto col-md-4">
       <%= f.submit "投稿する", class: 'btn btn-primary' %>
+      <button type="button" class="btn btn-primary" data-action="click->post#ruby">ルビ</button>
       <button type="button" class="btn btn-primary" data-action="click->post#upright">縦中横</button>
       <button type="button" class="btn btn-primary" data-action="click->post#space">全角スペース</button>
     </div>
   <% end %>
   <div class="vertical serif mx-auto width0" data-target="post.preview"></div>
 </div>
-
-<script type="text/javascript">
-$(function(){
-  const t = new TagHelper()
-  t.decorate($('#input'))
-})
-</script>
