--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -11,7 +11,7 @@
 
 <h4 id="ruby" class="mt-5 mx-auto form-group col-md-5">ルビの振り方</h4>
 
-<p class="col-md-5 mx-auto">短歌投稿フォームでルビを振りたい文字列を選択して、フォーム右下に現れる「ルビ」ボタンをタップすると、ルビ用のHTMLタグが挿入されます。カーソルが自動で&lt;rt&gt;〜&lt;/rt&gt;の間にセットされるので、そのままルビを入力してください。</p>
+<p class="col-md-5 mx-auto">短歌投稿フォームでルビを振りたい文字列を選択して、「ルビ」ボタンをタップすると、ルビ用のHTMLタグが挿入されます。カーソルが自動で&lt;rt&gt;〜&lt;/rt&gt;の間にセットされるので、そのままルビを入力してください。</p>
 
 <p class="col-md-5 mx-auto"><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rt&gt;ルビ&lt;/rt&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
 
@@ -50,7 +50,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
-  <li class="ml">2018/11/26　縦中横に対応。検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダウンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面のルビの振り方の説明のレイアウトとHelpリンク先を調整。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</li>
+  <li class="ml">2018/11/26　縦中横に対応。ルビボタンのUIを変更。検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダウンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面のルビの振り方の説明のレイアウトとHelpリンク先を調整。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</li>
   <li class="ml">2018/11/25　投稿画面では右上の「投稿する」ボタンを非表示とするように変更（投稿フォーム左下の「投稿する」と紛らわしいため）。</li>
   <li class="ml">2018/11/24　投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</li>
   <li class="ml">2018/11/23　投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビューに反映されない問題を解消。</li>
