--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,7 @@
-<% @title = '歌人検索' %>
+<% @title = '歌人一覧' %>
 
 <div class = "vertical serif tanka-index mt-3">
-  <h6>
-    「<%= @search %>」で検索：<%= link_to '短歌', search_posts_path(search: @search), method: :get %>｜<!--
-    --><% if user_signed_in? %><!--
-      --><%= link_to '自分の短歌', tanka_search_mine_path(search: @search), method: :get %>｜<!--
-    --><% end %><!--
-    -->歌人
-  </h6>
+  <h6>歌人一覧</h6>
   <% @users.each do |user| %>
     <p>
       <%= link_to (image_tag user.avatar.url(:medium), align: 'center'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
