--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,10 +16,10 @@
         <%= link_to '+フォロー', relationships_path(follow: @user.id), method: :post, class: 'btn btn-sm btn-primary horizontal middle' %>&nbsp;
       <% end %>
     <% end %>
-    <%= link_to 'フォロー', follow_user_path(id: @user.id), method: :get, class: 'middle horizontal sm tanka-link' %>
-    <%= link_to @user.following_by_type_count('User'), follow_user_path(id: @user.id), method: :get, class: 'middle horizontal' %>
-    <%= link_to 'フォロワー', follower_user_path(id: @user.id), method: :get, class: 'middle horizontal sm tanka-link' %>
-    <%= link_to @user.followers_by_type_count('User'), follower_user_path(id: @user.id), method: :get, class: 'middle horizontal' %>
+    <%= link_to 'フォロー', followees_user_path(id: @user.id), method: :get, class: 'middle horizontal sm tanka-link' %>
+    <%= link_to @user.following_by_type_count('User'), followees_user_path(id: @user.id), method: :get, class: 'middle horizontal' %>
+    <%= link_to 'フォロワー', followers_user_path(id: @user.id), method: :get, class: 'middle horizontal sm tanka-link' %>
+    <%= link_to @user.followers_by_type_count('User'), followers_user_path(id: @user.id), method: :get, class: 'middle horizontal' %>
     <span class="middle horizontal sm">投稿数</span>
     <span class="middle horizontal"><%= @count %></span>
     <% if @user.profile.present? %>
