--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
   <% if user_signed_in? && current_user.id != @post.user_id %>
     <%= render 'favorites/favorites', post: @post, size: 'lg' %>
   <% else %>
-    <i class="middle hearts lg fas fa-heart"></i><%= link_to @post.followers_by_type_count('User'), follower_post_path(id: @post.id), method: :get, class: 'middle horizontal hearts lg' %>
+    <i class="middle hearts lg fas fa-heart"></i><%= link_to @post.followers_by_type_count('User'), followers_post_path(id: @post.id), method: :get, class: 'middle horizontal hearts lg' %>
   <% end %>
   <% if @user == current_user %>
     <%= link_to '編集', edit_post_path(id: @post.id), method: :get, class: 'middle' %>&nbsp;
