--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -2,7 +2,7 @@
 
 <div class = "vertical serif tanka-index mt-3">
   <h6>
-    <%= link_to @user.name, user_path(id: @user.id), method: :get %>の<%= link_to 'フォロー', follow_user_path(id: @user.id), method: :get %>｜フォロワー
+    <%= link_to @user.name, user_path(id: @user.id), method: :get %>の<%= link_to 'フォロー', followees_user_path(id: @user.id), method: :get %>｜フォロワー
   </h6>
   <% @users.each do |user| %>
     <p>
