--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -17,9 +17,13 @@
 
 <p class="col-md-5 mx-auto">※ &lt;rp&gt;タグは内部的に自動で補完されるので入力不要です。</p>
 
+<h4 class="mt-5 mx-auto form-group col-md-5">短歌の編集</h4>
+
+<p class="col-md-5 mx-auto">個別短歌のページ（短歌の本文をタップすると表示されるページ）から「編集」をタップすると、短歌の編集ができます。短歌本文の修正や、投稿日時の変更を行えます。</p>
+
 <h4 class="mt-5 mx-auto form-group col-md-5">Twitterに短歌をシェアする方法</h4>
 
-<p class="col-md-5 mx-auto">個別短歌のページ（短歌の本文をタップすると表示されるページ）で、作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
+<p class="col-md-5 mx-auto">個別短歌のページで、作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
 
 <h4 class="mt-5 mx-auto form-group col-md-5">短歌にいいねした人の一覧を見る方法</h4>
 
@@ -50,7 +54,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
-  <li class="ml">2019/01/05　投稿日付の表示にUTC（協定世界時）が使われていた問題を解消。</li>
+  <li class="ml">2019/01/05　投稿日時の変更に対応。投稿日付の表示にUTC（協定世界時）が使われていた問題を解消。</li>
   <li class="ml">2018/12/23　URLの名称を一部変更。</li>
   <li class="ml">2018/12/04　ハンドルネームとプロフィールの字数制限を緩和。</li>
   <li class="ml">2018/11/26　縦中横に対応。ルビボタンをその他のボタンと同様に投稿フォーム下に固定で表示するように変更。検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダウンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</li>
