--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,6 +5,10 @@
 <div data-controller="post">
   <%= form_for(@post, url: { controller: :posts, action: :update }) do |f| %>
     <div class="form-group mx-auto col-md-4 mt-4">
+      <%= f.label :投稿日時 %>
+      <%= f.datetime_local_field :published_at, value: @post.published_at.strftime('%Y-%m-%dT%H:%M'), class: "form-control" %>
+    </div>
+    <div class="form-group mx-auto col-md-4 mt-4">
       <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', 'data-target': 'post.input', 'data-action': 'keyup->post#previewPost compositionend->post#previewPost' %>
     </div>
     <div class="form-group mx-auto col-md-4">
