--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -54,7 +54,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
-  <li class="ml">2019/01/05　投稿日時の変更に対応。投稿日付の表示にUTC（協定世界時）が使われていた問題を解消。</li>
+  <li class="ml">2019/01/05　編集画面での投稿日時の変更に対応。投稿時刻を表示するように変更。投稿日付の表示にUTC（協定世界時）が使われていた問題を解消。</li>
   <li class="ml">2018/12/23　URLの名称を一部変更。</li>
   <li class="ml">2018/12/04　ハンドルネームとプロフィールの字数制限を緩和。</li>
   <li class="ml">2018/11/26　縦中横に対応。ルビボタンをその他のボタンと同様に投稿フォーム下に固定で表示するように変更。検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダウンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</li>
