--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -53,28 +53,53 @@
 
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
-<ul class="mx-auto form-group col-md-5">
-  <li class="ml">2019/01/05　編集画面での投稿日時の変更に対応。投稿時刻を表示するように変更。投稿日付の表示にUTC（協定世界時）が使われていた問題を解消。</li>
-  <li class="ml">2018/12/23　URLの名称を一部変更。</li>
-  <li class="ml">2018/12/04　ハンドルネームとプロフィールの字数制限を緩和。</li>
-  <li class="ml">2018/11/26　縦中横に対応。ルビボタンをその他のボタンと同様に投稿フォーム下に固定で表示するように変更。検索フォームで何も文字を打たずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダウンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</li>
-  <li class="ml">2018/11/25　投稿画面では右上の「投稿する」ボタンを非表示とするように変更（投稿フォーム左下の「投稿する」と紛らわしいため）。</li>
-  <li class="ml">2018/11/24　投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</li>
-  <li class="ml">2018/11/23　投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビューに反映されない問題を解消。</li>
-  <li class="ml">2018/11/21　短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消。</li>
-  <li class="ml">2018/11/20　短歌の字数制限を緩和。</li>
-  <li class="ml">2018/11/19　投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消。</li>
-  <li class="ml">2018/11/18　「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消。</li>
-  <li class="ml">2018/11/07　短歌の字数制限を緩和。</li>
-  <li class="ml">2018/11/03　ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上のUtakataロゴが「あたらしい歌」へのリンクになっています。</li>
-  <li class="ml">2018/10/30　特殊記号を含む短歌をTwitterシェアできない問題を解消。</li>
-  <li class="ml">2018/10/15　通知機能の不具合を修正。</li>
-  <li class="ml">2018/10/08　Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は、上記連絡先にご連絡いただければ対応します。</li>
-  <li class="ml">2018/09/27　通知画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページを表示するように変更。</li>
-  <li class="ml">2018/09/13　Twitterシェア機能で"#"が表示されない問題を解消。</li>
-  <li class="ml">2018/08/12　SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更。</li>
-  <li class="ml">2018/07/31　Twitterシェア機能でセミコロンが表示されない問題を解消。</li>
-  <li class="ml">2018/07/13　投稿した短歌を編集する機能を追加。ユーザーページに短歌の投稿数を確認できる表示を追加。プロフィールの字数制限を140字以内から300字以内に緩和。</li>
-  <li class="ml">2018/06/26　ルビ以外の装飾が一部可能となっていた問題を解消。「ご案内」に情報を追加。</li>
-  <li class="ml">2018/06/23　サービスリリース。</li>
-</ul>
+<dl class="mx-auto form-group col-md-5">
+  <dt><time>2019/01/08</time></dt>
+  <dd>更新履歴のレイアウトを調整。</dd>
+  <dt><time>2019/01/05</time></dt>
+  <dd>編集画面での投稿日時の変更に対応。投稿時刻を表示するように変更。投稿日付の表示にUTC（協定世界時）が使われていた問題を解消。</dd>
+  <dt><time>2018/12/23</time></dt>
+  <dd>URLの名称を一部変更。</dd>
+  <dt><time>2018/12/04</time></dt>
+  <dd>ハンドルネームとプロフィールの字数制限を緩和。</dd>
+  <dt><time>2018/11/26</time></dt>
+  <dd>縦中横に対応。ルビボタンをその他のボタンと同様に投稿フォーム下に固定で表示するように変更。検索フォームで何も文字をたずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</dd>
+  <dt><time>2018/11/25</time></dt>
+  <dd>投稿画面では右上の「投稿する」ボタンを非表示とするように変更（投稿フォーム左下の「投稿する」と紛らわしいため）</dd>
+  <dt><time>2018/11/24</time></dt>
+  <dd>投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</dd>
+  <dt><time>2018/11/23</time></dt>
+  <dd>投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビーに反映されない問題を解消。</dd>
+  <dt><time>2018/11/21</time></dt>
+  <dd>短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消。</dd>
+  <dt><time>2018/11/20</time></dt>
+  <dd>短歌の字数制限を緩和。</dd>
+  <dt><time>2018/11/19</time></dt>
+  <dd>投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消。</dd>
+  <dt><time>2018/11/18</time></dt>
+  <dd>「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消。</dd>
+  <dt><time>2018/11/07</time></dt>
+  <dd>短歌の字数制限を緩和。</dd>
+  <dt><time>2018/11/03</time></dt>
+  <dd>ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上Utakataロゴが「あたらしい歌」へのリンクになっています。</dd>
+  <dt><time>2018/10/30</time></dt>
+  <dd>特殊記号を含む短歌をTwitterシェアできない問題を解消。</dd>
+  <dt><time>2018/10/15</time></dt>
+  <dd>通知機能の不具合を修正。</dd>
+  <dt><time>2018/10/08</time></dt>
+  <dd>Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は上記連絡先にご連絡いただければ対応します。</dd>
+  <dt><time>2018/09/27</time></dt>
+  <dd>通知画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページを表示するように変更。</dd>
+  <dt><time>2018/09/13</time></dt>
+  <dd>Twitterシェア機能で"#"が表示されない問題を解消。</dd>
+  <dt><time>2018/08/12</time></dt>
+  <dd>SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更。</dd>
+  <dt><time>2018/07/31</time></dt>
+  <dd>Twitterシェア機能でセミコロンが表示されない問題を解消。</dd>
+  <dt><time>2018/07/13</time></dt>
+  <dd>投稿した短歌を編集する機能を追加。ユーザーページに短歌の投稿数を確認できる表示を追加。プロフィールの字数制限を140以内から300字以内に緩和。</dd>
+  <dt><time>2018/06/26</time></dt>
+  <dd>ルビ以外の装飾が一部可能となっていた問題を解消。「ご案内」に情報を追加。</dd>
+  <dt><time>2018/06/23</time></dt>
+  <dd>サービスリリース。</dd>
+</dl>
