--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -5,7 +5,7 @@
 
 <p class="col-md-5 mx-auto">短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたり、Twitterに短歌をシェアしたりすることができます。</p>
 
-<p class="col-md-5 mx-auto">※ メールアドレスにスペルミスがあるとアカウント登録できないのでご注意ください。確認用メールが届かない場合は、スペルミスの可能性が高いので、もう一度正しいメールアドレスで<%= link_to '新規アカウント登録', new_user_registration_path %>を行ってください。</p>
+<p id="mis-spelling" class="col-md-5 mx-auto">※ メールアドレスにスペルミスがあるとアカウント登録できないのでご注意ください。確認用メールが届かない場合は、スペルミスの可能性が高いので、もう一度正しいメールアドレスで<%= link_to '新規アカウント登録', new_user_registration_path %>を行ってください。</p>
 
 <p class="col-md-5 mx-auto"><a href="https://fuyu.hatenablog.com/entry/2018/06/24/233652">開発の背景を紹介するブログ</a>を書きました。</p>
 
@@ -45,61 +45,178 @@
 
 <p class="col-md-5 mx-auto">不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
 
-<ul class="mx-auto form-group col-md-5">
-  <li class="ml">Email：utakatanka@gmail.com</li>
-  <li class="ml">Twitter：<a href="https://twitter.com/utakatanka">@utakatanka</a></li>
-  <li class="ml">管理人のTwitter：<a href="https://twitter.com/fuyu77">@fuyu77</a></li>
-</ul>
+<div class="mx-auto form-group col-md-5">
+  <ul class="ml">
+    <li>Email：utakatanka@gmail.com</li>
+    <li>Twitter：<a href="https://twitter.com/utakatanka">@utakatanka</a></li>
+    <li>管理人のTwitter：<a href="https://twitter.com/fuyu77">@fuyu77</a></li>
+  </ul>
+</div>
 
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <dl class="mx-auto form-group col-md-5">
+  <dt><time>2019/02/05</time></dt>
+  <dd>
+    <ul class="ml">
+      <li>更新履歴のレイアウトを調整</li>
+      <li>アカウント登録確認用メールの再送信機能を廃止し、確認用メールが届かない場合のヘルプへのリンクを追加</li>
+      <li>短歌投稿画面でヘルプへのリンクが切れていた問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2019/01/08</time></dt>
-  <dd>更新履歴のレイアウトを調整。</dd>
+  <dd>
+    <ul class="ml">
+      <li>更新履歴のレイアウトを調整</li>
+    </ul>
+  </dd>
   <dt><time>2019/01/05</time></dt>
-  <dd>編集画面での投稿日時の変更に対応。投稿時刻を表示するように変更。投稿日付の表示にUTC（協定世界時）が使われていた問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>編集画面での投稿日時の変更に対応</li>
+      <li>投稿時刻を表示するように変更</li>
+      <li>投稿日付の表示にUTC（協定世界時）が使われていた問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/12/23</time></dt>
-  <dd>URLの名称を一部変更。</dd>
+  <dd>
+    <ul class="ml">
+      <li>URLの名称を一部変更</li>
+    </ul>
+  </dd>
   <dt><time>2018/12/04</time></dt>
-  <dd>ハンドルネームとプロフィールの字数制限を緩和。</dd>
+  <dd>
+    <ul class="ml">
+      <li>ハンドルネームとプロフィールの字数制限を緩和</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/26</time></dt>
-  <dd>縦中横に対応。ルビボタンをその他のボタンと同様に投稿フォーム下に固定で表示するように変更。検索フォームで何も文字をたずに検索した場合に、直接歌人の一覧が表示されるように変更。短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更。ドロップダンメニューの「マイページ」と「タイムライン」の並び順を交代。投稿画面でドロップダウンメニューが隠れてしまう問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>縦中横に対応</li>
+      <li>ルビボタンをその他のボタンと同様に投稿フォーム下に固定で表示するように変更</li>
+      <li>検索フォームで何も文字をたずに検索した場合に、歌人の一覧が表示されるように変更</li>
+      <li>短歌を投稿した後に「タイムライン」ではなく「新しい歌」を表示するように変更</li>
+      <li>ドロップダンメニューの「マイページ」と「タイムライン」の並び順を交代</li>
+      <li>投稿画面でドロップダウンメニューが隠れてしまう問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/25</time></dt>
-  <dd>投稿画面では右上の「投稿する」ボタンを非表示とするように変更（投稿フォーム左下の「投稿する」と紛らわしいため）</dd>
+  <dd>
+    <ul class="ml">
+      <li>投稿画面では右上の「投稿する」ボタンを非表示とするように変更</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/24</time></dt>
-  <dd>投稿プレビューにルビタグのHTML属性が反映されていた問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>投稿プレビューにルビタグのHTML属性が反映されていた問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/23</time></dt>
-  <dd>投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化。投稿フォームでスマホで予測変換した際にプレビーに反映されない問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>投稿画面で「ルビ」ボタンを押した際に挿入されるルビタグの表示を簡略化</li>
+      <li>投稿フォームでスマホで予測変換した際にプレビーに反映されない問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/21</time></dt>
-  <dd>短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>短歌編集画面を開いた際に初期状態でプレビューが表示されない問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/20</time></dt>
-  <dd>短歌の字数制限を緩和。</dd>
+  <dd>
+    <ul class="ml">
+      <li>短歌の字数制限を緩和</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/19</time></dt>
-  <dd>投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/18</time></dt>
-  <dd>「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>「全角スペース」ボタンを押した際にプレビューが更新されない問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/07</time></dt>
-  <dd>短歌の字数制限を緩和。</dd>
+  <dd>
+    <ul class="ml">
+      <li>短歌の字数制限を緩和</li>
+    </ul>
+  </dd>
   <dt><time>2018/11/03</time></dt>
-  <dd>ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上Utakataロゴが「あたらしい歌」へのリンクになっています。</dd>
+  <dd>
+    <ul class="ml">
+      <li>ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除</li>
+    </ul>
+  </dd>
   <dt><time>2018/10/30</time></dt>
-  <dd>特殊記号を含む短歌をTwitterシェアできない問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>特殊記号を含む短歌をTwitterシェアできない問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/10/15</time></dt>
-  <dd>通知機能の不具合を修正。</dd>
+  <dd>
+    <ul class="ml">
+      <li>通知機能の不具合を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/10/08</time></dt>
-  <dd>Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は上記連絡先にご連絡いただければ対応します。</dd>
+  <dd>
+    <ul class="ml">
+      <li>Twitterログイン機能を追加</li>
+    </ul>
+  </dd>
   <dt><time>2018/09/27</time></dt>
-  <dd>通知画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページを表示するように変更。</dd>
+  <dd>
+    <ul class="ml">
+      <li>通知画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページを表示するように変更</li>
+    </ul>
+  </dd>
   <dt><time>2018/09/13</time></dt>
-  <dd>Twitterシェア機能で"#"が表示されない問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>Twitterシェア機能で"#"が表示されない問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/08/12</time></dt>
-  <dd>SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更。</dd>
+  <dd>
+    <ul class="ml">
+      <li>SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更</li>
+    </ul>
+  </dd>
   <dt><time>2018/07/31</time></dt>
-  <dd>Twitterシェア機能でセミコロンが表示されない問題を解消。</dd>
+  <dd>
+    <ul class="ml">
+      <li>Twitterシェア機能でセミコロンが表示されない問題を解消</li>
+    </ul>
+  </dd>
   <dt><time>2018/07/13</time></dt>
-  <dd>投稿した短歌を編集する機能を追加。ユーザーページに短歌の投稿数を確認できる表示を追加。プロフィールの字数制限を140以内から300字以内に緩和。</dd>
+  <dd>
+    <ul class="ml">
+      <li>投稿した短歌を編集する機能を追加</li>
+      <li>ユーザーページに短歌の投稿数を確認できる表示を追加</li>
+      <li>プロフィールの字数制限を140以内から300字以内に緩和</li>
+    </ul>
+  </dd>
   <dt><time>2018/06/26</time></dt>
-  <dd>ルビ以外の装飾が一部可能となっていた問題を解消。「ご案内」に情報を追加。</dd>
+  <dd>
+    <ul class="ml">
+      <li>ルビ以外の装飾が一部可能となっていた問題を解消</li>
+      <li>「ご案内」に情報を追加</li>
+    </ul>
+  </dd>
   <dt><time>2018/06/23</time></dt>
-  <dd>サービスリリース。</dd>
+  <dd>
+    <ul class="ml">
+      <li>サービスリリース</li>
+    </ul>
+  </dd>
 </dl>
