--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -56,6 +56,12 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <dl class="mx-auto form-group col-md-5">
+  <dt><time>2019/02/22</time></dt>
+  <dd>
+    <ul class="ml">
+      <li>ページネーションを右側にも追加</li>
+    </ul>
+  </dd>
   <dt><time>2019/02/05</time></dt>
   <dd>
     <ul class="ml">
