--- a/app/views/posts/followers.html.erb
+++ b/app/views/posts/followers.html.erb
@@ -10,6 +10,7 @@
     <% end %>
     <%= link_to (image_tag @user.avatar.url(:small)), user_path(id: @user.id), method: :get %>
   </h6>
+  <%= paginate @users %>
   <% @users.each do |user| %>
     <p>
       <%= link_to (image_tag user.avatar.url(:medium), align: 'center'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
