--- a/app/views/posts/popular.html.erb
+++ b/app/views/posts/popular.html.erb
@@ -5,6 +5,7 @@
       -->｜<%= link_to 'サイトのご案内', infos_path, method: :get %>
     <% end %>
   </h6>
+  <%= paginate @posts %>
   <%= render 'layouts/posts' %>
   <%= paginate @posts %>
 </div>
