--- a/app/views/users/followees.html.erb
+++ b/app/views/users/followees.html.erb
@@ -4,6 +4,7 @@
   <h6>
     <%= link_to @user.name, user_path(id: @user.id), method: :get %>のフォロー｜<%= link_to 'フォロワー', followers_user_path(id: @user.id), method: :get %>
   </h6>
+  <%= paginate @users %>
   <% @users.each do |user| %>
     <p>
       <%= link_to (image_tag user.avatar.url(:medium), align: 'center'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
