--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -8,6 +8,7 @@
     --><% end %><!--
     -->歌人
   </h6>
+  <%= paginate @users %>
   <% @users.each do |user| %>
     <p>
       <%= link_to (image_tag user.avatar.url(:medium), align: 'center'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
