ログイン画面の「ログイン情報を保存する」のチェックボックスをデフォルトでオンに変更

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -59,7 +59,7 @@
   <dt><time>2019/02/28</time></dt>
   <dd>
     <ul class="ml">
-      <li>ログイン画面でパスワードが自動補完されなかった問題を解消</li>
+      <li>ログイン画面の「ログイン情報を保存する」のチェックボックスをデフォルトでオンに変更</li>
     </ul>
   </dd>
   <dt><time>2019/02/25</time></dt>
