--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,15 +69,8 @@
   margin-right: 1em;
 }
 
-.navbar {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
 h6 {
-  margin-right: 1em;
-  margin-left: 0;
-  margin-top: 1em;
+  margin: 0 1em 0 0;
 }
 
 .form-width {
