レイアウトを調整

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark" style="background-color: #0095d9; padding-top: 0px; padding-bottom: 0px;">
+  <nav class="navbar navbar-expand navbar-dark">
     <%= link_to 'Utakata', posts_path, class: 'navbar-brand' %>
     <% if user_signed_in? %>
       <ul class="navbar-nav ml-auto">
