--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,11 @@
+@import "bootstrap";
 @import "toastr";
+
+.navbar {
+  background-color: #0095d9;
+  padding-top: 0;
+  padding-bottom: 0;
+}
 
 .btn-primary {
   color: #fff;
@@ -70,7 +77,7 @@
 }
 
 h6 {
-  margin: 0 1em 0 0;
+  margin: 1em 1em 0 0;
 }
 
 .form-width {
