FontAwesomeの読み込み方式を変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 @import "toastr";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 .navbar {
   background-color: #0095d9;
