エラーページを日本語化

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -60,6 +60,7 @@
   <dd>
     <ul class="ml">
       <li>サイトの表示を高速化</li>
+      <li>エラーページを日本語化</li>
     </ul>
   </dd>
   <dt><time>2019/02/28</time></dt>
