--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,7 @@
   font-family: "Font Awesome 5 Free";
   font-style: normal;
   font-weight: 900;
-  src: local("Font Awesome 5 Free"), url("https://utakatanka.jp/assets/font-awesome/fa-solid-900-08aa3a5ee68a21d5771a70b20495b6da1c0f996c46982cd1b0447ad2db730d11.woff2") format('woff2');
+  src: url("https://utakatanka.jp/assets/font-awesome/fa-solid-900-08aa3a5ee68a21d5771a70b20495b6da1c0f996c46982cd1b0447ad2db730d11.woff2") format('woff2');
   font-display: swap;
 }
 
