--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,7 +4,7 @@
 @import "font-awesome";
 
 @font-face {
-  font-family: "Font Awesome 5 Free";
+  font-family: "FontAwesome";
   font-style: normal;
   font-weight: 900;
   src: url("https://utakatanka.jp/assets/font-awesome/fa-solid-900-08aa3a5ee68a21d5771a70b20495b6da1c0f996c46982cd1b0447ad2db730d11.woff2") format('woff2');
