ユーザー名の字数制限を緩和

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -56,6 +56,12 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <dl class="mx-auto form-group col-md-5">
+  <dt><time>2019/03/04</time></dt>
+  <dd>
+    <ul class="ml">
+      <li>ユーザー名の字数制限を緩和</li>
+    </ul>
+  </dd>
   <dt><time>2019/03/03</time></dt>
   <dd>
     <ul class="ml">
